[package]
name = "my-bevy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9.1", features = ["dynamic"]}
bevy-inspector-egui = "0.17.0"
rand = "0.8"
bevy_prototype_debug_lines = "0.9"
# Or, for 3d:
# bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }